A wild fix for word wrapping in flexbox bug appeared!

--- a/src/courseware/_course-content-01.scss
+++ b/src/courseware/_course-content-01.scss
@@ -216,6 +216,8 @@
 
   &__main-content {
     width: 100%;
+    min-width: 0;
+    word-wrap: break-word;
     @include flex-shrink(1);
 
     label {
